<resources>
    <string name="app_name">SoptSeminar1</string>
    <string name="sopt_name">SOPT</string>
    <string name="kor_id">아이디</string>
    <string name="edit_id">아이디를 입력해주세요.</string>
    <string name="kor_pw">비밀번호</string>
    <string name="edit_pw">비밀번호를 입력해주세요.</string>
    <string name="kor_name">이름</string>
    <string name="edit_name">이름을 입력해주세요.</string>
    <string name="login">LOGIN</string>
    <string name="signup">회원가입</string>
    <string name="signupend">회원가입 완료</string>
    <string name="my_name">황연진</string>
    <string name="my_id">Yeoncheong</string>
    <string name="my_introduction">KINGSAMZO</string>
    <string name="follower_btn">팔로워 목록</string>
    <string name="repo_btn">레포지토리 목록</string>
    <string name="pic">프로필사진</string>
    <string name="follower">팔로워</string>
    <string name="repository">레포지토리</string>
    <string name="name">이름 : </string>
    <string name="introduce">설명 : </string>
    <string name="profile">프로필</string>
    <string name="home">홈</string>
    <string name="camera">카메라</string>
    <string name="github">GitHub</string>
    <string name="edit">준비중입니다</string>
    <string name="attach">첨부하기</string>
    <string name="auto_login">자동 로그인</string>
    <string name="onboarding">온보딩</string>
    <string name="btn_next">다음으로</string>
    <string name="onboarding_hello">GitHub에 오신걸\n환영합니다!</string>
    <string name="onboarding_time">GitHub에서 즐거운 시간\n보내시길 바랍니다!</string>
    <string name="onboarding_start">GitHub를\n시작해봅시다!</string>
    <string name="setting">환경설정</string>
    <string name="logout">로그아웃</string>

</resources>