<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/my_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/pic"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.3"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.07"
        android:contentDescription="@string/pic"/>

    <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textSize="23sp"
        android:fontFamily="@font/nanum_gothic_bold_kr"
        app:layout_constraintTop_toBottomOf="@id/my_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/my_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_id"
        android:textSize="15sp"
        android:fontFamily="@font/nanum_gothic_kr"
        app:layout_constraintTop_toBottomOf="@id/my_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/my_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_introduction"
        android:textSize="20sp"
        android:fontFamily="@font/nanum_gothic_kr"
        app:layout_constraintTop_toBottomOf="@id/my_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_follower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/follower_btn"
        android:textSize="17sp"
        android:fontFamily="@font/nanum_gothic_bold_kr"
        android:textColor="@color/selector_profile_button_text"
        android:background="@drawable/selector_profile_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_repo"
        app:layout_constraintTop_toBottomOf="@id/my_mbti"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_repo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/repo_btn"
        android:textSize="17sp"
        android:fontFamily="@font/nanum_gothic_bold_kr"
        android:textColor="@color/selector_profile_button_text"
        android:background="@drawable/selector_profile_button"
        app:layout_constraintTop_toBottomOf="@id/my_mbti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_follower"
        app:layout_constraintTop_toTopOf="@id/btn_follower"
        android:layout_marginHorizontal="20dp"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_follower"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>