<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.camera.CameraFragment">

    <ImageView
        android:id="@+id/img_gallery"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/camera"/>

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/nanum_gothic_kr"
        android:textFontWeight="400"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/img_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_attached"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/attach"
        android:textSize="17sp"
        android:fontFamily="@font/nanum_gothic_kr"
        android:textFontWeight="200"
        android:backgroundTint="@color/btnfollower"
        app:layout_constraintTop_toBottomOf="@id/text_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="18dp"
        android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>